--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 .idea
+*.vscode
 
 # Compiled class file
 *.class
@@ -25,9 +26,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# bazel
 .ijwb/
+bazel-*/
 
+# py env
 venv/
-*.vscode
 *.pyc
 
